--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mskcc/test",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jamesmsk/test/issues"
   },
-  "homepage": "https://github.com/jamesmsk/test#readme"
+  "homepage": "https://github.com/jamesmsk/test#readme",
+  "dependencies": {
+    "@mskcc/reserve": "^1.0.0"
+  }
 }
